fix:bandiera italiana align center

--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,7 @@ footer {
 
 .footer-top .col-small > nav{
     display: flex;
+    align-items: center;
     max-width: 100%;
     margin-top: 20px;
 }
@@ -328,6 +329,10 @@ footer {
     cursor: pointer;
 }
 
+#lang option{
+    background-color: #23272A;
+}
+
 
 .footer-top .col-big {
     width: 70%;
@@ -342,7 +347,7 @@ footer {
 }
 
 #bandiera{
-    height: 10px;
+    height: 14px;
 }
 
 .col-inner a{
